--- a/datastoreAPI.ipynb
+++ b/datastoreAPI.ipynb
@@ -146,6 +146,27 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "-k_yx-WLxp6Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#create\n",
+        "url = \"https://zimablue.appspot.com/createCustomer\"\n",
+        "payload =  {\n",
+        "  \"firstname\": \"lucifer\",\n",
+        "  \"lastname\": \"morningstar\",\n",
+        "  \"account_number\": \"666\"\n",
+        "}\n",
+        "df = api_call(url, payload)\n",
+        "df "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "pCrIpeY4sGvs",
         "colab_type": "code",
         "outputId": "d9ede58f-4d0a-40b7-a4c9-bbffc52969c6",
